--- a/wrangler.toml
+++ b/wrangler.toml
@@ -8,7 +8,7 @@ compatibility_date = "2025-03-01"
 
 # 设置自定义域名
 routes = [
-  { pattern = "zxxe.eu.cc", custom_domain = true }
+  { pattern = "zxxe.x10.mx", custom_domain = true }
 ]
 
 # 启用 D1 数据库
